--- a/cluster/frontend/src/app/components/record/record.component.html
+++ b/cluster/frontend/src/app/components/record/record.component.html
@@ -1,6 +1,7 @@
 
 <video #previewVideo controls></video>
 
+<app-map></app-map>
 <form>
   <mat-form-field style="min-width:300px">
     <input matInput placeholder="remote url" [(ngModel)]="forwardToWebsocketUrl" name="forwardToWebsocketUrl">
