--- a/cluster/frontend/src/app/map/map.component.html
+++ b/cluster/frontend/src/app/map/map.component.html
@@ -1,6 +1,3 @@
-<google-map
-  height="400px"
-  width="100%"
-  [center]="center"
-  [zoom]="zoom">
-</google-map>
+<div #map style="height: 800px"></div>
+<div #shownPaths style="height: 800px"></div>
+<div #trackPath style="height: 800px"></div>
